--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -60,10 +60,11 @@
               name="reserve"
               action="index.html"
               method="get"
-              onsubmit="return validate();"
+              onsubmit="event.preventDefault(); return validate();"
             >
               <div
-                class="formData">
+                class="formData" data-error-visible="false"
+                data-error="">
                 <label>Prénom</label><br>
                 <input
                   class="text-control"
@@ -71,11 +72,11 @@
                   id="first"
                   name="first"
                   minlength="2"
-                /><br>
-                <span id="firstError" class="error-message"></span>
+                /><br>              
               </div>
               <div
-                class="formData">
+                class="formData" data-error-visible="false"
+                data-error="">
                 <label>Nom</label><br>
                 <input
                   class="text-control"
@@ -83,10 +84,10 @@
                   id="last"
                   name="last"
                 /><br>
-                <span id="lastError" class="error-message"></span>
               </div>
               <div
-                class="formData">
+                class="formData" data-error-visible="false"
+                data-error="">
                 <label>E-mail</label><br>
                 <input
                   class="text-control"
@@ -94,10 +95,10 @@
                   id="email"
                   name="email"
                 /><br>
-                <span id="emailError" class="error-message"></span>
               </div>
               <div
-                class="formData">
+                class="formData" data-error-visible="false"
+                data-error="">
                 <label>Date de naissance</label><br>
                 <input
                   class="text-control"
@@ -105,17 +106,18 @@
                   id="birthdate"
                   name="birthdate"
                 /><br>
-                <span id="birthDateError" class="error-message"></span>
               </div>
               <div
-                class="formData">
+                class="formData" data-error-visible="false"
+                data-error="">
                 <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
                 <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99"></br>
                 <span id="quantityError" class="error-message"></span>
               </div>
               <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
               <div
-                class="formData">
+                class="formData" data-error-visible="false"
+                data-error="">
                 <input
                   class="checkbox-input"
                   type="radio"
@@ -185,7 +187,8 @@
               </div>
 
               <div
-                class="formData">
+                class="formData" data-error-visible="false"
+                data-error="">
                 <input
                   class="checkbox-input"
                   type="checkbox"
@@ -221,6 +224,5 @@
       </p>
     </footer>
     <script src="js/modal.js"></script>
-    <script src="js/formValidation.js"></script>
   </body>
 </html>
