modification page accueil, css, modal.js, ajout de commentaire

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -44,6 +44,7 @@
       <div class="content">
         <span class="close"></span>
         <div class="modal-body">
+          <!-- lance la fonction validate, et empéche la soumission du formulaire-->
           <form
             name="reserve"
             action="index.html"
@@ -240,8 +241,11 @@
         </div>
       </div>
     </div>
+    <div class="btn-signup-container">
+      <button class="btn-signup modal-btn" onclick="launchModal()">
+        je m'inscris
+      </button>
   </main>
-
   <footer>
     <p class="copyrights">
       Copyright 2014 - 2022, GameOn Inc.
